# OGrad

./: .gitmodules
api/Macrograd/: .gitignore  CMakeLists.txt  README.md  macrograd.cpp  model_mediator.cpp  model_mediator.h  output_handler.cpp  output_handler.h  output_metrics.cpp  output_metrics.h
api/Macrograd/.github/workflows/: macrograd-ci-cd.yml
api/Macrograd/datasetreader/: CMakeLists.txt  CSVReader.cpp  CSVReader.h  DataSet.cpp  DataSet.h  DataSetReader.h  DataSetsPathConfig.h.in
api/Macrograd/datasets/: CMakeLists.txt
api/Macrograd/ioutils/: CMakeLists.txt  IOUtils.cpp  IOUtils.h
api/Macrograd/jsons/: simple_json.json
api/Macrograd/layers/: CMakeLists.txt  Layer.h  LayerUtils.cpp  LayerUtils.h  Linear.cpp  Linear.h
api/Macrograd/layers/buildingblocks/: CMakeLists.txt  Mat.cpp  Mat.h  Node.cpp  Node.h  Vec.h  Vec3D.cpp  Vec3D.h
api/Macrograd/layers/learningrates/: CMakeLists.txt  LearningRate.h  StaticLR.cpp  StaticLR.h  StepDecay.cpp  StepDecay.h  TimeBasedDecay.cpp  TimeBasedDecay.h
api/Macrograd/layers/lossfns/: CMakeLists.txt  LossFn.h  MeanSquaredError.cpp  MeanSquaredError.h  RootMeanSquaredError.cpp  RootMeanSquaredError.h  SoftmaxCrossEntropyLoss.cpp  SoftmaxCrossEntropyLoss.h
api/Macrograd/layers/operators/: Broadcast.cpp  Broadcast.h  CMakeLists.txt  Operator.cpp  Operator.h  Pow.cpp  Pow.h  TanH.cpp  TanH.h
api/Macrograd/model/: CMakeLists.txt  Model.cpp  Model.h  ModelBuilder.cpp  ModelBuilder.h
api/Macrograd/python_scripts/: model.py  regression_metrics.py
api/Macrograd/tests/: BroadcastTest.cpp  BuildingBlocksTests.cpp  CMakeLists.txt  DataSetReadersTest.cpp  LayersTest.cpp  LearningRatesTest.cpp  LossFnsTest.cpp  ModelBuilderTest.cpp  ModelTest.cpp  NodeSanityTest.cpp  OperatorsTest.cpp  Test.cpp  Vec3DTest.cpp
api/Macrograd/valgrind-logs/: BuildingBlocksHeap.txt  OperatorsHeap.txt
